fix(button): fixed button text color active/disabled on Safari and iOs

--- a/src/button/button_theme_alfa-dark.css
+++ b/src/button/button_theme_alfa-dark.css
@@ -32,7 +32,7 @@
             background: var(--color-dark-bg-secondary-inverted);
 
             .button__text {
-                color: var(--color-dark-text-tertiary-inverted-transparent);
+                opacity: 0.2;
             }
         }
     }
@@ -62,7 +62,7 @@
             background: var(--color-dark-bg-secondary-inverted);
 
             .button__text {
-                color: var(--color-dark-text-tertiary-inverted-transparent);
+                opacity: 0.2;
             }
         }
     }
@@ -77,7 +77,7 @@
         background: var(--color-dark-bg-secondary);
 
         .button__text {
-            color: var(--color-dark-text-disabled-transparent);
+            opacity: 0.2;
         }
     }
 }
